fixed checkbox spacing

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@ input[type="number"] {
     box-sizing: border-box;
 }
 
+input[type="checkbox"] {
+    margin-right: 10px;
+}
+
 button {
     background-color: #007bff;
     color: #fff;
